[MM-57081] Spacing, font and cutoff issues on Channel notifications preferences modal (#26587)

--- a/webapp/channels/src/components/widgets/modals/components/base_setting_item.scss
+++ b/webapp/channels/src/components/widgets/modals/components/base_setting_item.scss
@@ -9,11 +9,11 @@
         padding: 0;
         margin: 0 0 8px;
         color: var(--center-channel-color);
-        font-family: 'Metropolis', sans-serif;
-        font-size: 16px;
+        font-family: "Open Sans", sans-serif;
+        font-size: 14px;
         font-style: normal;
         font-weight: 600;
-        line-height: 24px;
+        line-height: 20px;
     }
 
     &__description {
@@ -82,6 +82,7 @@
         width: fit-content;
         flex-direction: row;
         align-items: center;
+        margin-bottom: 0;
         cursor: pointer;
         font-size: 14px;
         font-weight: 400;
